--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,7 @@ trim_trailing_whitespace = true
 block_comment_start = /*
 block_comment = *
 block_comment_end = */
+max_line_length = 80
 
 # don't change these files
 [{doc/**,src/include/{linux,sys}/**,testing/{hosts,tests}/**,AUTHORS,COPYING}]
