--- a/src/libstrongswan/plugins/pqsdk/tests/Makefile.am
+++ b/src/libstrongswan/plugins/pqsdk/tests/Makefile.am
@@ -16,11 +16,17 @@ pqsdk_tests_CFLAGS = \
 pqsdk_tests_LDFLAGS = @COVERAGE_LDFLAGS@
 pqsdk_tests_LDADD =                                     \
     $(top_builddir)/src/libstrongswan/libstrongswan.la  \
-    $(top_builddir)/src/libstrongswan/tests/libtest.la  \
-    $(top_builddir)/src/libstrongswan/plugins/pqsdk/pqtls/libstrongswan-pqsdk-pqtls.la
+    $(top_builddir)/src/libstrongswan/tests/libtest.la
 
 if USE_PQSDK_PQTLS
     pqsdk_tests_CFLAGS += -DUSE_PQSDK_PQTLS \
-    -I$(top_srcdir)/src/libstrongswan/plugins/pqsdk/pqtls
+    -I$(top_srcdir)/src/libstrongswan/plugins/pqsdk
     pqsdk_tests_LDADD += $(top_builddir)/src/libstrongswan/plugins/pqsdk/pqtls/libstrongswan-pqsdk-pqtls.la
+endif
+
+
+if USE_PQSDK_PQSDKD
+    pqsdk_tests_CFLAGS += -DUSE_PQSDK_PQSDKD \
+    -I$(top_srcdir)/src/libstrongswan/plugins/pqsdk
+    pqsdk_tests_LDADD += $(top_builddir)/src/libstrongswan/plugins/pqsdk/pqsdkd/libstrongswan-pqsdk-pqsdkd.la
 endif
